<resources>
    <string name="app_name">fridgeapp1</string>
    <string name="add_new_item">Add new food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_name">Food Name</string>
    <string name="expires_at">Expires at</string>
    <string name="enter_food_name">Enter food name</string>
    <string name="expiration_date">Expiration date</string>
    <string name="delete">Delete</string>
    <string name="confirm_creating">Confirm creating</string>
    <string name="days">days</string>
    <string name="datepicker_title">Select expiration date</string>
    <string name="confirm_deleting_label">Delete food entry?</string>
    <string name="confirm_deleting_cancel">Cancel</string>
    <string name="confirm_deleting_accept">Accept</string>
</resources>