<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/margin"
    android:clipToPadding="false"
    android:focusableInTouchMode="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_data_food_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_food_name"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_data_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_data_expire_date_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/expirement_date"
        app:endIconMode="custom"
        app:endIconDrawable="@android:drawable/ic_menu_day"
        android:layout_marginEnd="@dimen/margin_between_elements"
        app:layout_constraintTop_toBottomOf="@id/input_data_food_name_layout"
        app:layout_constraintRight_toLeftOf="@id/input_data_expire_days_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_weight="3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_data_expire_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="01.01.1970" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_data_expire_days_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/days"
        android:minWidth="48dp"
        app:layout_constraintLeft_toRightOf="@id/input_data_expire_date_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_data_food_name_layout"
        app:layout_constraintHorizontal_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_data_expire_days"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:maxLength="9"
            tools:text="157" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDelete"
        style="?attr/floatingActionButtonSmallSecondaryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toTopOf="@+id/btnAccept"
        app:layout_constraintEnd_toEndOf="@+id/btnAccept"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnAccept" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/confirm_creating"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>